--- a/package.json
+++ b/package.json
@@ -9,8 +9,9 @@
     "lint": "next lint"
   },
   "dependencies": {
-    "motion": "^12.4.13",
-    "next": "15.2.1",
+    "@rive-app/react-canvas-lite": "^4.18.3",
+    "motion": "^12.5.0",
+    "next": "15.2.2",
     "react": "^19.0.0",
     "react-dom": "^19.0.0"
   },
@@ -21,7 +22,7 @@
     "@types/react": "^19",
     "@types/react-dom": "^19",
     "eslint": "^9",
-    "eslint-config-next": "15.2.1",
+    "eslint-config-next": "15.2.2",
     "tailwindcss": "^4",
     "typescript": "^5"
   }
