--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
   },
   "dependencies": {
     "@rive-app/react-canvas-lite": "^4.18.3",
+    "lenis": "^1.2.3",
     "motion": "^12.5.0",
     "next": "15.2.2",
     "react": "^19.0.0",
