--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "lenis": "^1.2.3",
     "motion": "^12.5.0",
     "next": "15.2.2",
+    "next-view-transitions": "^0.3.4",
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
     "react-icons": "^5.5.0"
