--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   },
   "dependencies": {
     "@rive-app/react-canvas-lite": "^4.18.3",
+    "classnames": "^2.5.1",
     "lenis": "^1.2.3",
     "motion": "^12.5.0",
     "next": "15.2.2",
