--- a/package.json
+++ b/package.json
@@ -16,6 +16,8 @@
     "motion": "^12.5.0",
     "next": "15.2.2",
     "next-view-transitions": "^0.3.4",
+    "posthog-js": "^1.239.0",
+    "posthog-node": "^4.16.0",
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
     "react-icons": "^5.5.0"
